0.487 2023-09-07
  [New Features]
    * The following methods in the Sys class are added.
    
      static method fstat : Sys::IO::Stat ($fd : int);
    
0.486 2023-09-06
  [Bug Fix]
    * Some bugs are fixed: The connect, getaddrinfo, and getnameinfo have not return correct return values.
  [New Features]
    * The Sys::Socket::Util class is added.
    * The Sys::Socket::In_addr_base class is added.
    * The Sys::Socket::In_addr class extends Sys::Socket::In_addr_base.
    * The Sys::Socket::In6_addr class extends Sys::Socket::In_addr_base.
  [Incompatible Changes]
    * The following methods in the Sys::Socket class are changed.
      
      -  static method inet_pton : int ($af : int, $src : string, $dst : object of Sys::Socket::In_addr|Sys::Socket::In6_addr);
      +  static method inet_pton : int ($af : int, $src : string, $dst : Sys::Socket::In_addr_base);
      
      -  static method inet_ntop : mutable string ($af : int, $src : object of Sys::Socket::In_addr|Sys::Socket::In6_addr, $dst : mutable string, $size : int);
      +  static method inet_ntop : mutable string ($af : int, $src : Sys::Socket::In_addr_base, $dst : mutable string, $size : int);
    
0.485 2023-09-04
  
  [Bug Fix]
    * A bug fix: the sleep method in the Sys class has been wrong.
    
  [Incompatible Changes]
    * The following methods in the Sys class is changed.
    
      -  static method send : int ($sockfd : int, $buf : string, $len : int, $flags : int, $buf_offset : int = 0);
      +  static method send : int ($sockfd : int, $buf : string, $flags : int, $addr : Sys::Socket::Sockaddr = undef);
      
      -  static method select : int ($nfds : int, $readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval);          +  static method select : int ($readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval);
  
  [Exception Message Changes]