@@ -477,6 +477,14 @@ A string for the next argument $optval is created by the length $optlen.
 Calls the L<getsockopt|SPVM::Sys::Socket/"getsockopt"> method in the L<Sys::Socket|SPVM::Sys::Socket> class
 with the $optval and $optlen, and the $optval set by this method is returnd.
 
+=head2 truncate
+
+  static method truncate : int ($fd : int, $legnth : long);
+
+Calls the L<ftruncate|SPVM::Sys::IO/"ftruncate"> method in the L<Sys::IO|SPVM::Sys::IO> class.
+
+If succeed, returns 1.
+
 =head1 Modules
 
 All modules included in this distribution. These classes have methods that directly correspond to Linux/Unix/Mac or Windows system call functions written in C. In addition, several helper methods are implemented.
